iks/proxy-protocol/echo-iks-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echo

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
  namespace: echo
  labels:
    app: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: lionelmace/http-https-echo
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        - containerPort: 8443

---

apiVersion: v1
kind: Service
metadata:  
  name: echo-service
  namespace: echo
  annotations:
    service.kubernetes.io/ibm-load-balancer-cloud-provider-enable-features: "proxy-protocol"
spec:
  type: LoadBalancer
  selector:
    app: echo
  ports:  
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8443
