iks/proxy-protocol/echo-k8s-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
  namespace: default
  labels:
    app: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: mendhak/http-https-echo
        ports:
        - containerPort: 80
        - containerPort: 443

---

apiVersion: v1
kind: Service
metadata:  
  name: echo-service
  namespace: default
spec:
  selector:
    app: echo
  ports:  
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  # added
  externalTrafficPolicy: Local
  type: LoadBalancer
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-community-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
spec:
  tls:
  - hosts:
    - iks-706860-483cccd2f0d38128dd40d2b711142ba9-0000.eu-de.containers.appdomain.cloud
    secretName: iks-706860-483cccd2f0d38128dd40d2b711142ba9-0000
  rules:
  - host: iks-706860-483cccd2f0d38128dd40d2b711142ba9-0000.eu-de.containers.appdomain.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: echo-service
          servicePort: 80
